--- a/text/projekt-20-literatura-bibliography.bib
+++ b/text/projekt-20-literatura-bibliography.bib
@@ -154,5 +154,49 @@ address = {Natick, Massachusetts}
     title = {Solving Ordinary Differential Equations II. Stiff and Differential-Algebraic Problems},
     volume = {14},
     journal = {Springer Verlag Series in Comput. Math.},
-    doi = {10.1007/978-3-662-09947-6}
+    doi = {10.1007/978-3-662-09947-6},
+    publisher = {Springer-Verlag Berlin Heidelberg}
+}
+
+@book{Nunez-Iglesias:2017:ESA:3169538,
+ author = {Nunez-Iglesias, Juan and van der Walt, Stfan and Dashnow, Harriet},
+ title = {Elegant SciPy: The Art of Scientific Python},
+ year = {2017},
+ isbn = {1491922877, 9781491922873},
+ edition = {1st},
+ publisher = {O'Reilly Media, Inc.},
+}
+
+@book{kirk2017thoughtful,
+  title={Thoughtful Machine Learning with Python: A Test-driven Approach},
+  author={Kirk, M.},
+  isbn={9781491924136},
+  lccn={2017446107},
+  url={https://books.google.cz/books?id=DCd4rgEACAAJ},
+  year={2017},
+  publisher={O'Reilly}
+}
+
+@article{cohen2010cost,
+  title={Cost savings from reduced catheter-related bloodstream infection after simulation-based education for residents in a medical intensive care unit},
+  author={Cohen, Elaine R and Feinglass, Joe and Barsuk, Jeffrey H and Barnard, Cynthia and O'Donnell, Anna and McGaghie, William C and Wayne, Diane B},
+  journal={Simulation in healthcare},
+  volume={5},
+  number={2},
+  pages={98--102},
+  year={2010},
+  publisher={LWW}
+}
+
+@article{NEGRAO20113051,
+title = "Energy and cost savings in household refrigerating appliances: A simulation-based design approach",
+journal = "Applied Energy",
+volume = "88",
+number = "9",
+pages = "3051 - 3060",
+year = "2011",
+issn = "0306-2619",
+doi = "https://doi.org/10.1016/j.apenergy.2011.03.013",
+url = "http://www.sciencedirect.com/science/article/pii/S030626191100170X",
+author = "Cezar O.R. Negrão and Christian J.L. Hermes",
 }
