--- a/text/projekt-01-kapitoly-chapters.tex
+++ b/text/projekt-01-kapitoly-chapters.tex
@@ -398,9 +398,25 @@ V této kapitole lze nalézt výsledky z experimentů a následné vyhodnocení 
 
 \section{Model 2}
 \label{srovnani-kruh}
-\subsection{MATLAB}
-\subsection{Modelica}
-\subsection{Python}
+jhgjh
+\begin{table}[]
+\centering
+\begin{tabular}{|l|l|l|l|}
+\hline
+             & Rychlost výpočtu {[}s{]} &  &  \\ \hline
+MATLAB       &                          &  &  \\ \hline
+GNU Octave   &                          &  &  \\ \hline
+SciLab       &                          &  &  \\ \hline
+Dymola       &                          &  &  \\ \hline
+OpenModelica &                          &  &  \\ \hline
+jModelica    &                          &  &  \\ \hline
+Scipy        &                          &  &  \\ \hline
+             &                          &  &  \\ \hline
+\end{tabular}
+\caption{Průměrná rychlost výpočtu v sekundách pro model 1. Průměr byl počítán z 50 měření.}
+\label{tab:kruh-rychlost}
+\end{table}
+
 \subsection{Shrnutí}
 
 \section{Model 3}
