grant me a wish

--- a/text/projekt-01-kapitoly-chapters.tex
+++ b/text/projekt-01-kapitoly-chapters.tex
@@ -395,11 +395,9 @@ V této kapitole lze nalézt výsledky z experimentů a následné vyhodnocení 
 
 \section{Model 1}
 \label{srovnani-micek}
+\blindtext
 
-\section{Model 2}
-\label{srovnani-kruh}
-jhgjh
-\begin{table}[]
+\begin{table}[ht]
 \centering
 \begin{tabular}{|l|l|l|l|}
 \hline
@@ -414,17 +412,59 @@ Scipy        &                          &  &  \\ \hline
              &                          &  &  \\ \hline
 \end{tabular}
 \caption{Průměrná rychlost výpočtu v sekundách pro model 1. Průměr byl počítán z 50 měření.}
-\label{tab:kruh-rychlost}
+\label{tab:micek-tabulka}
+\end{table}
+
+\section{Model 2}
+\label{srovnani-kruh}
+\blindtext
+
+\begin{table}[ht]
+\centering
+\begin{tabular}{|l|l|l|l|}
+\hline
+             & Rychlost výpočtu {[}s{]} &  &  \\ \hline
+MATLAB       &                          &  &  \\ \hline
+GNU Octave   &                          &  &  \\ \hline
+SciLab       &                          &  &  \\ \hline
+Dymola       &                          &  &  \\ \hline
+OpenModelica &                          &  &  \\ \hline
+jModelica    &                          &  &  \\ \hline
+Scipy        &                          &  &  \\ \hline
+             &                          &  &  \\ \hline
+\end{tabular}
+\caption{Průměrná rychlost výpočtu v sekundách pro model 1. Průměr byl počítán z 50 měření.}
+\label{tab:kruh-tabulka}
 \end{table}
 
 \subsection{Shrnutí}
 
 \section{Model 3}
 \label{srovnani-tuhy}
+\blindtext
+
+\begin{table}[ht]
+\centering
+\begin{tabular}{|l|l|l|l|}
+\hline
+             & Rychlost výpočtu {[}s{]} &  &  \\ \hline
+MATLAB       &                          &  &  \\ \hline
+GNU Octave   &                          &  &  \\ \hline
+SciLab       &                          &  &  \\ \hline
+Dymola       &                          &  &  \\ \hline
+OpenModelica &                          &  &  \\ \hline
+jModelica    &                          &  &  \\ \hline
+Scipy        &                          &  &  \\ \hline
+             &                          &  &  \\ \hline
+\end{tabular}
+\caption{Průměrná rychlost výpočtu v sekundách pro model 1. Průměr byl počítán z 50 měření.}
+\label{tab:tuhy-tabulka}
+\end{table}
 
 \section{Model 4}
 
 \section{Model 5}
+
 
 \section{Shrnutí}
 
